--- a/config/nginx.conf.ejs
+++ b/config/nginx.conf.ejs
@@ -6,8 +6,10 @@ gzip_vary          on;
 gzip_types application/atom+xml application/javascript application/json application/rss+xml application/vnd.ms-fontobject application/x-font-ttf application/x-web-app-manifest+json application/xhtml+xml application/xml font/opentype image/svg+xml image/x-icon text/css text/plain text/x-component;
 # text/html is always compressed by HttpGzipModule
 
+# server unix:<%= rootDirectory %>/tmp/canary.sock fail_timeout=0;
+
 upstream canary_upstream {
-  server unix:<%= rootDirectory %>/tmp/canary.sock fail_timeout=0;
+  server localhost:<%= nodeHttpPort %> fail_timeout=0;
 }
 
 server {
